[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/bg.png" type="Texture" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/obstacle_spawn.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/world.gd" type="Script" id=6]
[ext_resource path="res://scenes/menu_layer.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("background_1:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background_1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("background_2:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 960, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "background_scroll"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("background_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -960, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background_2:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 0 ), Vector2( 0, 0 ) ]
}

[node name="world" type="Node2D"]
script = ExtResource( 6 )

[node name="hud" parent="." instance=ExtResource( 5 )]

[node name="menu_layer" parent="." instance=ExtResource( 7 )]

[node name="background_anim" type="AnimationPlayer" parent="."]
autoplay = "background_scroll"
anims/RESET = SubResource( 1 )
anims/background_scroll = SubResource( 2 )

[node name="background_1" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="background_2" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 960, 0 )

[node name="obstacle_spawn" parent="." instance=ExtResource( 4 )]
position = Vector2( 800, 0 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 115, 427 )

[node name="ground" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 686 )

[connection signal="start_game" from="menu_layer" to="." method="_on_menu_layer_start_game"]
[connection signal="died" from="player" to="." method="_on_player_died"]
[connection signal="body_entered" from="ground/death_zone" to="." method="_on_death_zone_body_entered"]

[editable path="ground"]
